syntax = "proto3";
package rocks.mango.proto.api;
import "proto-types/base.proto";

option java_multiple_files = true;

option java_package = "rocks.mango.api.policy";

message PPolicy {
    // id полиса(UUID)
    string id = 1;
    // id пользователя(UUID)
    string user_id = 2;
    // дата начала действия полиса
    PTimestamp start_date = 3;
    // дата окончания действия полиса
    PTimestamp end_date = 4;
    // период(месяц, день etc)
    PPeriodType period_type = 5;
    // платеж по которому куплен полис
    repeated string payment_ids = 6;
    // номер полиса
    string policy_number = 7;
    // версия
    int64 version = 8;
    // id объекта страхования(пока адрес)
    string insurance_object_id = 10;
    // лимиты
    map<string, PLimit> limits = 11;
    // цена за период
    PAmount price = 12;
    // id подписки
    string subscription_id = 13;
}

message PLimit {
    PAmount value = 1;
}

enum PPeriodType {
    MONTH = 0;
    DAY = 1;
}

message PPolicyAppView {
    string id = 1;
    PAmount price = 2;
    string address = 3;
    map<string, PLimit> limits = 4;
    PPolicyStatus status = 5;
    string subscription_id = 6;
    PTimestamp end_date = 7;
    PTimestamp start_date = 8;
    bool paid = 9;
    bool cancelled = 10;
    string pdf_link = 11;
    string pdf_signature_link = 12;
}

message PCard {
    string first_six = 1;
    string last_four = 2;
    string type = 3;
    string exp_date = 4;
    string token = 5;
}

enum PPolicyStatus {
    ACTIVE = 0;
    INACTIVE = 1;
    WILL_BE_ACTIVE = 2;
    WILL_BE_INACTIVE = 3;
}
